fix overlay rgba on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ body {
     left: 0;
     top: 0;
     position: absolute;
-    background-color: rgba(0, 0, 0, .5);
 }
 
 .app_body {
